fix: set the CI to false as the pipeline sets it to true by default

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # Set CI=false to avoid treating warnings as errors
+      - name: Set CI to false
+        run: echo "CI=false" >> $GITHUB_ENV
+
       # Build the React app
       - name: Build the React app
         run: npm run build
