--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+PUBLIC_URL=/stock-math
 REACT_APP_ALPHA_VANTAGE_BASE_URL=https://www.alphavantage.co/
-REACT_APP_ALPHA_VANTAGE_API_KEY=<your-api-key>
+REACT_APP_ALPHA_VANTAGE_API_KEY=demo
