--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
           
       - name: Install Dependencies 📦
         run: npm ci
+
+      - name: Set Environment Variables 🌍
+        run: echo "REACT_APP_ALPHA_VANTAGE_API_KEY=${{ secrets.REACT_APP_ALPHA_VANTAGE_API_KEY }}" >> $GITHUB_ENV
         
       - name: Build 🔧
         run: npm run build
